--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,1 +1,7 @@
 @use "base/resets";
+@use "base/base";
+@use "base/typography";
+@use "base/colors";
+@use "base/transitions";
+
+@use "components/buttons/buttons";
