"Hero" Components Styled

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,3 +5,7 @@
 @use "base/transitions";
 
 @use "components/buttons/buttons";
+
+@use "components/hero/hero";
+@use "components/hero/heroImg";
+@use "components/hero/heroContent";
