"Gallery" Components Styled

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,3 +9,7 @@
 @use "components/hero/hero";
 @use "components/hero/heroImg";
 @use "components/hero/heroContent";
+
+@use "components/gallery/gallery";
+@use "components/gallery/galleryPicture";
+@use "components/gallery/galleryContent";
