"Footer" Components Styled

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -13,3 +13,8 @@
 @use "components/gallery/gallery";
 @use "components/gallery/galleryPicture";
 @use "components/gallery/galleryContent";
+
+@use "components/footer/footer";
+@use "components/footer/footerLogo";
+@use "components/footer/footerText";
+@use "components/footer/footerSocials";
